--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,8 +1,10 @@
 <html>
 <head>
   <title>Backbar Coding Challenge</title>
+  
 </head>
 <body>
     <div id="app"></div>
+    <script src="./main.js"></script>
 </body>
 </html>
